# swugenerator

./: README.rst  pyproject.toml
swugenerator/: generator.py  main.py
tests/: test_integration.py  test_main.py
tests/test_data/integration_input/: config.json  enc-sw-description.json  sw-description.json
tests/test_data/integration_output/: output.swu.enc  signed_output.swu.enc
