[project]
name = "swugenerator"
description = "Generator of Update Packages (SWU) for SWUpdate OTA Agent"
version = "0.5"
authors = [
    { name = "Stefano Babic", email = "stefano.babic@swupdate.org" }
]
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = {file = "LICENSE"}

dynamic = ["scripts"]
dependencies = [
   "libconf~=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pylint>=2.15.10",
    "black>=22.12.0",
    "python-libarchive>=4.2.1",
]

[project.urls]
Homepage = "https://github.com/sbabic/swugenerator"

[build-system]
requires = ["setuptools>=45.0"]
build-backend = "setuptools.build_meta"
